[package]
name = "dyndns"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.39"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
reqwest = "0.12.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
